Closed Bug 1789785 Opened 2 years ago Closed 2 years ago

UrlListener class cannot be instantiated more than once.

Categories

(MailNews Core :: Backend, defect)

defect

Tracking

(thunderbird_esr102 wontfix)

RESOLVED FIXED
106 Branch
Tracking Status
thunderbird_esr102 --- wontfix

People

(Reporter: benc, Assigned: benc)

References

Details

Attachments

(1 file)

I screwed up and had NS_IMPL_ISUPPORTS in the header file.
So if you include it more than once, you get link errors. Doh.

I'm going to admitting defeat and add a corresponding .cpp file. No point having everything in the header anyway, given how aggressively XPCOM fights against inlining :-)

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/69046aa3753d
Move NS_IMPL_ISUPPORTS out of UrlListener.h to fix inevitable link errors. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: