Bug 1789785 - Move NS_IMPL_ISUPPORTS out of UrlListener.h to fix inevitable link errors. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D156776